@@ -1,3 +1,10 @@
+Thu Mar 25 15:44:51 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.cpp:
+        * connectors/dds4ccm/impl/dds/DDS_TopicBase_Connector_T.cpp:
+          Optimized logging. Throwing an exception when the connector
+          was unable to delete the DomainParticipant.
+
 Thu Mar 25 15:27:13 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>
 
         * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Receiver/Latency_Receiver.cpp
